snapshots/syntax/library/functions/type_checking/isnull/isnull_do_until.snap
---
source: src/syntax/library/functions/type_checking/isnull.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: DoStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: DoKeyword
                  text: Do
                - kind: Whitespace
                  text: " "
                - kind: UntilKeyword
                  text: Until
                - kind: Whitespace
                  text: " "
                - kind: UnaryExpression
                  children:
                    - kind: NotKeyword
                      text: Not
                    - kind: Whitespace
                      text: " "
                    - kind: CallExpression
                      children:
                        - kind: Identifier
                          text: IsNull
                        - kind: LeftParenthesis
                          text: (
                        - kind: ArgumentList
                          children:
                            - kind: Argument
                              children:
                                - kind: IdentifierExpression
                                  children:
                                    - kind: Identifier
                                      text: result
                        - kind: RightParenthesis
                          text: )
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: Whitespace
                      text: "        "
                    - kind: AssignmentStatement
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: result
                        - kind: Whitespace
                          text: " "
                        - kind: EqualityOperator
                          text: "="
                        - kind: Whitespace
                          text: " "
                        - kind: CallExpression
                          children:
                            - kind: Identifier
                              text: TryGetResult
                            - kind: LeftParenthesis
                              text: (
                            - kind: ArgumentList
                              children: []
                            - kind: RightParenthesis
                              text: )
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: LoopKeyword
                  text: Loop
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
